--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "pg": "^8.8.0"
   },
   "dependencies": {
-    "@strapi/plugin-i18n": "4.5.2",
-    "@strapi/plugin-users-permissions": "4.5.2",
-    "@strapi/strapi": "4.5.2",
+    "@strapi/plugin-i18n": "4.5.3",
+    "@strapi/plugin-users-permissions": "4.5.3",
+    "@strapi/provider-email-nodemailer": "^4.5.3",
+    "@strapi/strapi": "4.5.3",
     "better-sqlite3": "7.4.6",
     "strapi-plugin-populate-deep": "^1.1.2"
   },
